--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -27,6 +29,23 @@
                     <li>Team</li>
                     <li>Sign in</li>
                 </ul>
+            </div>
+        </div>
+        <div class="center">
+            <img class="back" src="img/Rectangle.svg" alt="">
+            <img class="photo" src="img/illustration_2-01.svg" alt="">
+            <div class="text">Stay productive, wherever you are</div>
+            <div class="text1">Never let location be an issue when accessing your files. Fylo has you covered for all your file storage needs.</div>
+            <div class="text2">Securely share files and folders with friends, family and collegues for live collaboration. No email attachments required!</div>
+            <div class="green">See how Fylo works
+                <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+            </div>
+            <div class="border">
+                <div class="square">Fylo has improved our team productivity by an order of magnitude. Since making the switch our heam has become a well-oiled collaboration machine. </div>
+                <i class="fa fa-quote-left" aria-hidden="true"></i>
+                <img src="img/Oval.png" alt="">
+                <div class="name">Kyle Burton</div>
+                <div class="job">Founder & CEO, Huddle</div>
             </div>
         </div>
     </div>
