--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 </head>
 <body>
     <div class="main">
+       <div class="nav">
+        <div class="logo">
+            <img src="img/nav_logo 5.svg" alt="">
+        </div>
+        <div class="menu">
+            <ul>
+                <li>Features</li>
+                <li>Team</li>
+                <li>Sign in</li>
+            </ul>
+        </div>
+       </div>
+       <div class="section1">
         <label>
             <input type="text" placeholder="Enter your email...">
         </label>
         <button class="btn">Get Started</button>
+        <h1 class="word">All your files in one secure location, accessible anywhere.</h1>
+        <p>Fylo stores your most important files in one secure locetion. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
         <img src="img/illustration_1-01.svg" alt="">
-        <div class="header">
-            <div class="logo">
-                <a href="">
-                    <img src="img/Fill 1.png" alt="">
-                </a>
-                Fylo
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>Features</li>
-                    <li>Team</li>
-                    <li>Sign in</li>
-                </ul>
-            </div>
-        </div>
+       </div>
         <div class="center">
             <img class="back" src="img/Rectangle.svg" alt="">
             <img class="photo" src="img/illustration_2-01.svg" alt="">
@@ -46,6 +47,41 @@
                 <img src="img/Oval.png" alt="">
                 <div class="name">Kyle Burton</div>
                 <div class="job">Founder & CEO, Huddle</div>
+            </div>
+        </div>
+        <div class="cta">
+            <label>
+                <input type="text" placeholder="email@example.com">
+            </label>
+            <button class="btn2">Get Started For Free</button>
+            <h1>Get early access today</h1>
+            <p>It only takes a minute to dign up and our free started tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        </div>
+        <div class="footer">
+            <div class="stolb1">
+                <img src="img/Group 4.svg" alt="">
+            <p class="phone">Phone: +1-543-123-4567</p>
+            <img class="pr" src="img/phone-in-talk.svg" alt="">
+            <p class="mail">example@fylo.com</p>
+            <img class="gm" src="img/Group 12.png" alt="">
+            </div>
+            <div class="stolb2">
+                <ul>
+                    <li>About Us</li>
+                    <li>Jobs</li>
+                    <li>Press</li>
+                    <li>Blog</li>
+                </ul>
+            </div>
+            <div class="stolb3">
+                <ul>
+                    <li>Contact Us</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+            <div class="social">
+                <img src="img/Group 18.png" alt="">
             </div>
         </div>
     </div>
